<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sjsu.ajay.fitnessapp.WorkOutDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/bottom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="horizontal">

            <TextView
                style="@style/h2"
                android:layout_weight="1"
                android:padding="14dp"
                android:text="@string/WorkOutDetails" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/custom_border">

                <TextView
                    style="@style/h5"
                    android:layout_height="match_parent"
                    android:paddingTop="15dp"
                    android:text="@string/average" />

                <TextView
                    android:id="@+id/avg_min_per_km"
                    style="@style/big"
                    android:layout_width="wrap_content"
                    android:paddingTop="6dp"
                    android:text="0.457" />

                <TextView
                    style="@style/h5"
                    android:layout_width="wrap_content"
                    android:gravity="bottom"
                    android:text="min/km" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/custom_border">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <TextView
                        style="@style/h6"
                        android:layout_height="match_parent"
                        android:text="@string/max" />

                    <TextView
                        android:id="@+id/max_min_per_km"
                        style="@style/med"
                        android:layout_width="wrap_content"
                        android:text="0.9" />

                    <TextView
                        style="@style/h6"
                        android:layout_width="wrap_content"
                        android:gravity="bottom"
                        android:text="min/km" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:orientation="horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <TextView
                        style="@style/h6"
                        android:layout_height="match_parent"
                        android:text="@string/min" />

                    <TextView
                        android:id="@+id/min_min_per_km"
                        style="@style/med"
                        android:layout_width="wrap_content"
                        android:text="0.2" />

                    <TextView
                        style="@style/h6"
                        android:layout_width="wrap_content"
                        android:gravity="bottom"
                        android:text="min/km" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center|bottom">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
